--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -232,12 +232,13 @@ article
       // The caption for the hero image.
       align-self: flex-end
       color: white
-      display: block
       font-family: $serif-titling
       font-size: 7.4375em
       font-weight: 800
       line-height: 1.0756em
-      margin: 0 auto
+      margin-bottom: 0px
+      margin-right: 0px
+      margin-top: 0px
       max-width: 1040px
       padding: 48px
       text-align: center
