--- a/index.css
+++ b/index.css
@@ -1086,18 +1086,22 @@ aside[feedback] {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  left: 0;
+  left: -272px;
   padding: 10px;
   position: fixed;
   text-align: center;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   top: 78.5%;
   width: 250px;
   z-index: 49; }
   @media (max-width: 1190px) {
     aside[feedback] {
-      height: 40px;
-      position: relative;
-      width: 100%; } }
+      height: initial;
+      left: 0;
+      position: relative; } }
+  aside[feedback].visible {
+    left: 0; }
   aside[feedback] div[description] {
     color: #0F1620;
     font-family: "franklin-gothic-urw", "Avenir Next", "Avenir", Arial, sans-serif;
@@ -1264,18 +1268,6 @@ form[representative] {
     form[representative] div[suggestion] section {
       font-family: "franklin-gothic-urw", "Avenir Next", "Avenir", Arial, sans-serif;
       font-size: 1em; }
-
-div[feedback-shadow] {
-  border-style: solid;
-  border-width: 1px;
-  height: 115px;
-  left: 0;
-  top: 78.5%;
-  padding: 10px;
-  position: fixed;
-  visibility: hidden;
-  width: 250px;
-  z-index: -1; }
 
 footer {
   -ms-flex-line-pack: center;
